# gkey-rs

./: .gitignore  Cargo.toml  README.md
src/: app.rs  data_deal.rs  lib.rs  main.rs
src/selection/: mod.rs  rand.rs  unicode.rs
