[package]
name = "gkey-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = {version = "0.28.1"}
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
env_logger = "0.11.3"
rand = "0.8.5"
tokio = {version = "*", features = ["full"]}
parking_lot = "0.12.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.14"
ring = "0.17.13"
hex = "0.4.3"